RESOLVED FIXED240580
Fix comment about termination in AuxiliaryProcess
https://bugs.webkit.org/show_bug.cgi?id=240580
Summary Fix comment about termination in AuxiliaryProcess
Olivier Blin
Reported 2022-05-18 08:41:07 PDT
On the comment for disableTermination(), enableTermination() is the method needed to re-enable process termination. Typo present from initial introduction in r83767
Attachments
Olivier Blin
Comment 1 2022-05-18 09:12:03 PDT
EWS
Comment 2 2022-05-18 10:02:03 PDT
Committed r294402 (250696@main): <https://commits.webkit.org/250696@main> Reviewed commits have been landed. Closing PR #727 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-18 10:03:14 PDT
Note You need to log in before you can comment on or make changes to this bug.