Fix comment about termination in AuxiliaryProcess https://bugs.webkit.org/show_bug.cgi?id=240580

Patch by Olivier Blin <olivier.blin@softathome.com> on 2022-05-18
Reviewed by Chris Dumez.

enableTermination is the one needed to re-enable process termination.
Typo present from initial introduction in r83767.

* Shared/AuxiliaryProcess.h:

Canonical link: https://commits.webkit.org/250696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294402 268f45cc-cd09-0410-ab3c-d52691b4dbfc